--- a/Main.css
+++ b/Main.css
@@ -16,18 +16,22 @@
 
 ::-webkit-scrollbar {
     width: 12px;
-    background-color: #f5f5f5;
     height: 12px;
 }
 
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 50px;
-    background-color: #95e1d3;
+    border-radius:3px;
+    background-color: rgba(149, 225, 211, 0.5);
+    transition: all .5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(149, 225, 211, 1);
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #f5f5f5;
+    background: rgba(0, 0, 0, 0.0);
     border-radius: 50px;
 }
 
@@ -112,6 +116,7 @@ body, html {
     -ms-transition: all .5s ease-in-out;
     -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
+    overflow:overlay;
 }
 
 span{
