--- a/Main.css
+++ b/Main.css
@@ -117,7 +117,7 @@ body, html {
     -ms-transition: all .5s ease-in-out;
     -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
-    overflow:overlay;
+    overflow:hidden;
 }
 
 span{
