--- a/Main.css
+++ b/Main.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
+.OVERF {
+    overflow: overlay;
+}
+
 :root {
     --fs1: 9.375em; /*150px*/
     --fs2: 4.500em; /*72px*/
