css add overflow hidden
dfberwefergerg

--- a/Main.css
+++ b/Main.css
@@ -121,6 +121,7 @@ body, html {
     -ms-transition: all .5s ease-in-out;
     -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
+    overflow: hidden;
 }
 
 span{
