--- a/Main.css
+++ b/Main.css
@@ -138,6 +138,17 @@ body, html {
 .background-content{
     height: 100%;
     overflow: overlay;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    scroll-behavior: smooth;
+    position: relative;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    height: 100%;
 }
 
 span{
