--- a/Main.css
+++ b/Main.css
@@ -112,7 +112,7 @@ body, html {
     padding: 0;
     width: 100%;
     scroll-behavior: smooth;
-    position: relative;
+    position: fixed;
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -ms-transition: all .5s ease-in-out;
