--- a/Main.css
+++ b/Main.css
@@ -119,6 +119,7 @@ body, html {
     -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
     height: 100%;
+    overflow: overlay;
 }
 
 span{
