--- a/Main.css
+++ b/Main.css
@@ -117,12 +117,13 @@ body, html {
     -ms-transition: all .5s ease-in-out;
     -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
-    height: 100%;   
+    height: 100%; 
+    position: relative;
+    overflow: overlay;
 }
 
 .BodyScLock {
   position: fixed;
-  overflow: overlay;
 }
 
 span{
