--- a/Main.css
+++ b/Main.css
@@ -16,7 +16,7 @@
     color: #ffffff;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 12px;
     height: 12px;
 }
@@ -34,6 +34,15 @@
 
 ::-webkit-scrollbar-track {
     background: rgba(0, 0, 0, 0.0);
+} */
+
+::-webkit-scrollbar
+{width: 0px;}
+
+::-webkit-scrollbar-track-piece
+{
+    background-color: transparent;
+    -webkit-border-radius: 6px;
 }
 
 
