--- a/Main.css
+++ b/Main.css
@@ -353,7 +353,7 @@ nav ul li svg{
 }
 
 .scroll_whiteVie {
-  background: #95e1d3;
+  background: #c0392b;
   opacity: 0;
   width: 6px;
     transform: translate(0%, -100%);
